--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.5",
     "@nestjs/apollo": "^12.0.11",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
@@ -30,7 +31,8 @@
     "cors": "^2.8.5",
     "graphql": "^16.8.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typegraphql-nestjs": "^0.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
